<resources>
    <string name="app_name">MoviesApp</string>
    <string name="poster">Poster</string>
    <string name="back_text_details">Back</string>
    <string name="back_text_details_path"><![CDATA[<]]></string>
    <string name="default_pg_text">13+</string>
    <string name="default_tags_text">Action, Adventure, Fantasy</string>
    <string name="star_text">star</string>
    <string name="default_text_reviews_count">125 reviews</string>
    <string name="storyline_label_text">Storyline</string>
    <string name="default_text_storyline_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast_label_text">Cast</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="main_poster_description">Main Poster</string>
    <string name="star_description">Star</string>
    <string name="first_image_description">First Image</string>
    <string name="second_image_description">Second Image</string>
    <string name="three_image_description">Three image</string>
    <string name="four_image_description">Four Image</string>
    <string name="movies_list_label_text">Movies list</string>
    <string name="default_title_movie">Avengers: End Game</string>
    <string name="default_time_film">137 MIN</string>
    <string name="image_actor_desciption">Image actor</string>
    <string name="now_playong">Now playong</string>
    <string name="popular">Popular</string>
    <string name="top_rated_text">Top rated</string>
    <string name="up_coming">Up coming</string>
    <string name="search">Search</string>
    <string name="search_value">Search</string>
    <string name="search_text">Enter the name of the movie to find it</string>
    <string name="mailing_movies" translatable="false">Mailing movies</string>
    <string name="all_new_movies" translatable="false">All new movies</string>
    <string name="select_movie">Select a date watching the movie</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="access_text">Continue please grant access to calendar</string>
    <string name="ok_dialog">OK</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="error_message">An error occurred on the server</string>
    <string name="transition_name">element_details</string>
</resources>