<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/now_playing_text"
        style="@style/text_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/now_playong" />

    <TextView
        android:id="@+id/popular_text"
        style="@style/text_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/popular" />

    <TextView
        android:id="@+id/top_rated_text"
        style="@style/text_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/top_rated_text" />

    <TextView
        android:id="@+id/upcoming_text"
        style="@style/text_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/up_coming" />

</LinearLayout>