<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layerType="software"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:background="@drawable/ic_mask"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/detail_poster"
            app:layout_constraintEnd_toEndOf="@id/detail_poster"
            app:layout_constraintStart_toStartOf="@id/detail_poster"
            app:layout_constraintTop_toTopOf="@id/detail_poster" />

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:background="@drawable/orig"
            android:contentDescription="@string/poster"
            android:layerType="software"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/back_activity"
            style="@style/defaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_back"
            android:layout_marginTop="@dimen/margin_top_back"
            android:text="@string/back_text_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back_activity_path"
            style="@style/defaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_path_back_start"
            android:layout_marginTop="@dimen/margin_top_back"
            android:text="@string/back_text_details_path"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pg"
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/margin_top_pg"
            android:background="@drawable/border"
            android:text="@string/default_pg_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_movie"
            style="@style/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/small_margin_title"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="left|top"
            android:text="Avengers:\nEnd Game"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pg"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tag_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/very_small_margin_top"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="left"
            android:text="@string/default_tags_text"
            android:textColor="@color/text_color_tags"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_movie"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/star_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/very_small_margin_top"
            android:contentDescription="@string/star_text"
            android:src="@drawable/ic_star_positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <ImageView
            android:id="@+id/star_two"
            style="@style/star_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/star_one"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <ImageView
            android:id="@+id/star_three"
            style="@style/star_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/star_two"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <ImageView
            android:id="@+id/star_four"
            style="@style/star_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/star_three"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <ImageView
            android:id="@+id/star_five"
            style="@style/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/star_four"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <TextView
            android:id="@+id/reviews_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8.89dp"
            android:text="@string/default_text_reviews_count"
            android:textColor="@color/color_reviews_count"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/star_five"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <TextView
            android:id="@+id/storyline_label"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/storyline_label_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/star_one" />

        <TextView
            android:id="@+id/storyline_description"
            style="@style/defaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/very_small_margin_top"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/default_text_storyline_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyline_label" />

        <TextView
            android:id="@+id/cast_label"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/cast_label_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyline_description" />

        <ImageView
            android:id="@+id/first_image_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/margin_artist"
            android:src="@drawable/toni"
            app:layout_constraintEnd_toStartOf="@id/second_image_cast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast_label" />

        <ImageView
            android:id="@+id/second_image_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cast_margin"
            android:layout_marginTop="@dimen/margin_artist"
            android:src="@drawable/cap"
            app:layout_constraintEnd_toStartOf="@id/three_image_cast"
            app:layout_constraintStart_toEndOf="@id/first_image_cast"
            app:layout_constraintTop_toBottomOf="@id/cast_label" />

        <ImageView
            android:id="@+id/three_image_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cast_margin"
            android:layout_marginTop="@dimen/margin_artist"
            android:src="@drawable/xalk"
            app:layout_constraintEnd_toStartOf="@id/four_image_cast"
            app:layout_constraintStart_toEndOf="@id/second_image_cast"
            app:layout_constraintTop_toBottomOf="@id/cast_label" />

        <ImageView
            android:id="@+id/four_image_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cast_margin"
            android:layout_marginTop="@dimen/margin_artist"
            android:layout_marginEnd="@dimen/default_margin"
            android:src="@drawable/tor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/three_image_cast"
            app:layout_constraintTop_toBottomOf="@id/cast_label" />

        <TextView
            android:id="@+id/first_text_cast"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/name_artist_margin"
            android:text="@string/robert_downey_jr"
            app:layout_constraintEnd_toEndOf="@id/first_image_cast"
            app:layout_constraintStart_toStartOf="@id/first_image_cast"
            app:layout_constraintTop_toBottomOf="@id/first_image_cast" />

        <TextView
            android:id="@+id/second_text_cast"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/name_artist_margin"
            android:text="@string/chris_evans"
            app:layout_constraintEnd_toEndOf="@id/second_image_cast"
            app:layout_constraintStart_toStartOf="@id/second_image_cast"
            app:layout_constraintTop_toBottomOf="@id/second_image_cast" />

        <TextView
            android:id="@+id/three_text_cast"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/name_artist_margin"
            android:text="@string/mark_ruffalo"
            app:layout_constraintEnd_toEndOf="@id/three_image_cast"
            app:layout_constraintStart_toStartOf="@id/three_image_cast"
            app:layout_constraintTop_toBottomOf="@id/three_image_cast" />

        <TextView
            android:id="@+id/four_text_cast"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/name_artist_margin"
            android:text="@string/chris_hemsworth"
            app:layout_constraintEnd_toEndOf="@id/four_image_cast"
            app:layout_constraintStart_toStartOf="@id/four_image_cast"
            app:layout_constraintTop_toBottomOf="@id/four_image_cast" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
